# grahamdumpleton.me

./: .eleventy.js  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  posts-metadata.json  pyproject.toml
.github/workflows/: deploy.yml
archive/: detect-quotes.py  download_posts.py  extract_post.py
blogger/: README.md  download_posts.py  extract_post.py  posts-metadata.json
posts/2007/03/: resistance-is-futile.html  resistance-is-futile.json  resistance-is-futile.md
posts/2007/07/: commodity-shared-hosting-and-modwsgi.html
posts/2007/09/: parallel-python-discussion-and-modwsgi.html
posts/2007/10/: google-hates-modwsgi.html  version-12-of-modwsgi-is-now-available.html
posts/2007/11/: poor-mans-python-virtual-environment.html
posts/2008/03/: version-20-of-modwsgi-is-now-available.html
posts/2008/08/: version-23-of-modwsgi-is-now-available.html
posts/2008/12/: using-modwsgi-when-developing-django.html
posts/2009/03/: final-chance-for-providing-input-into.html  future-roadmap-for-modwsgi.html  load-spikes-and-excessive-memory-usage.html  python-interpreter-is-not-created-for.html
posts/2009/04/: accreditation-for-python-web-hosting.html  improving-commercial-pythonwsgi-hosting.html  (+3 more)
scripts/: download_posts.py  extract_post.py
src/: index.liquid
src/_data/: labs.js
src/_layouts/: base.liquid  course.liquid  guide.liquid  post.liquid
src/about/: index.liquid  index.md
src/guides/: guides.json  index.liquid
src/labs/: course.liquid  index.liquid  workshop-session.liquid
src/pages/: index.liquid
src/posts/: index.liquid
(+846 files in other folders)
