[project]
name = "blogger-post-extractor"
version = "1.0.0"
description = "Extract blog post from a Google Blogger site"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "urllib3>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
